argocd/manifests/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-dashboard
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
      kind: Gateway
  hostnames:
    - "argocd.homelab"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
